fix: 테스트케이스 API 수정 및 컨트롤러에 operation 추가